--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           curl -s -X POST \
           -H "Content-Type: application/json" \
-          -d '{ "username": "secrets.DOCKER_USERNAME", "password": "secrets.DOCKER_PASSWORD" }' \
+          -d '{ "username": ${{ secrets.DOCKER_USERNAME }}, "password": ${{ secrets.DOCKER_PASSWORD }} }' \
           https://hub.docker.com/v2/users/login \
           | jq -r .token
 
